--- a/package.json
+++ b/package.json
@@ -1,39 +1,15 @@
 {
-  "_from": "oas3-tools@^1.0.1",
-  "_id": "oas3-tools@1.0.1",
-  "_inBundle": false,
-  "_integrity": "sha512-eolDDdOhz8lRuM1LJ2vTsCPTIFiZ8Q8n/iBLNewpD+fnDhNP6wOZNfBF1ZAdl+haLKSh1SmVAv1Ox0OYRXTbyA==",
-  "_location": "/oas3-tools",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "range",
-    "registry": true,
-    "raw": "oas3-tools@^1.0.1",
-    "name": "oas3-tools",
-    "escapedName": "oas3-tools",
-    "rawSpec": "^1.0.1",
-    "saveSpec": null,
-    "fetchSpec": "^1.0.1"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "http://nexus.pagseguro.intranet/repository/npm-all/oas3-tools/-/oas3-tools-1.0.1.tgz",
-  "_shasum": "7e2cc9fca0c063393ece0f35437355378334faeb",
-  "_spec": "oas3-tools@^1.0.1",
-  "_where": "/home/reuzebio/workspace/@bko-fin/conciliacao/App/financial-hub_mock-server/api",
   "author": {
     "name": "Jeremy Whitlock",
     "email": "jwhitlock@apache.org",
     "url": "https://github.com/whitlockjc"
   },
   "bin": {
-    "oas3-tools": "./bin/oas3-tools"
+    "oas3-tools-tecas": "./bin/oas3-tools-tecas"
   },
   "bugs": {
     "url": "https://github.com/bug-hunters/oas3-tools/issues"
   },
-  "bundleDependencies": false,
   "dependencies": {
     "async": "^2.5.0",
     "body-parser": "1.18.2",
@@ -53,8 +29,7 @@
     "traverse": "^0.6.6",
     "z-schema": "^3.15.4"
   },
-  "deprecated": false,
-  "description": "Various tools for using and integrating with Swagger/Open API v3.",
+  "description": "Bug fix for oas3-tools - Swagger/Open API v3.",
   "devDependencies": {
     "browserify": "^14.4.0",
     "connect": "^3.4.0",
@@ -100,14 +75,14 @@
   ],
   "license": "MIT",
   "main": "index.js",
-  "name": "oas3-tools",
+  "name": "oas3-tools-tecas",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/bug-hunters/oas3-tools.git"
+    "url": "https://github.com/romulobordezani/os3-tools-tecas.git"
   },
   "scripts": {
     "test": "gulp",
     "test-debug": "node --debug-brk node_modules/.bin/gulp"
   },
-  "version": "1.0.1"
+  "version": "1.0.2"
 }
